// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IncorporationDetailsContainer to match on form submit 1`] = `
<body>
  <div>
    <form
      class="h-100 was-validated"
    >
      <div
        class="d-flex flex-column manage-company h-100"
      >
        <div
          class="d-flex layout-header align-items-center"
        >
          <div>
            <nav
              aria-label="breadcrumb"
            >
              <ol
                class="breadcrumb"
              >
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="#"
                    role="button"
                  >
                    <a
                      href="/home"
                    >
                      Home
                    </a>
                  </a>
                </li>
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="#"
                    role="button"
                  >
                    <a
                      href="/companys"
                    >
                      Manage Company
                    </a>
                  </a>
                </li>
              </ol>
            </nav>
            <h5 />
          </div>
          <div
            class="d-flex align-items-center justify-content-center tab-wrapper"
          />
          <div
            class="ml-auto"
          >
            <div>
              <a
                href="/companys"
              >
                <button
                  class="btn btn-secondary"
                  flow="add,save"
                  link="/companys"
                  type="button"
                >
                  Cancel
                </button>
              </a>
                 
              <button
                class="btn btn-primary"
                flow="save,add"
                type="submit"
              >
                Save
              </button>
                 
            </div>
          </div>
          <div
            class="error-banner d-flex align-items-center "
          >
            <div>
              <div
                class="error-heading"
              >
                OOPS!
              </div>
              <div
                class="error-reason"
              >
                Something went wrong! please try again.
              </div>
            </div>
            <div
              class="ml-auto"
            >
              <button
                class="btn btn-link"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-times fa-w-10 "
                  color="#212529"
                  data-icon="times"
                  data-prefix="fal"
                  focusable="false"
                  role="img"
                  style="font-size: 1.5rem;"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="layout-content h-100 overflow-auto"
        >
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Address 1
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  name="address1"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Address 2
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  name="address2"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Country
                   
                </label>
                <button
                  class="form-control dropSide disabled dropdown"
                  disabled=""
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                    <option
                      value="USA"
                    >
                      USA
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    USA
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    disabled=""
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
              <div
                class=" sm form-group"
              >
                <label
                  class="form-label"
                >
                  State
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  City
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  name="city"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=" xs form-group"
              >
                <label
                  class="form-label"
                >
                  Zip Code
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  name="postalCode"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Phone number
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  name="phoneNumber"
                  type="phone"
                  value=""
                />
              </div>
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  E Mail
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  name="email"
                  type="email"
                  value=""
                />
              </div>
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Company Website
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  name="website"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="line-separator"
          />
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Business type
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                    <option
                      value="1"
                    >
                      LLC
                    </option>
                    <option
                      value="2"
                    >
                      PLC
                    </option>
                    <option
                      value="3"
                    >
                      C-Corp
                    </option>
                    <option
                      value="4"
                    >
                      S-Corp
                    </option>
                    <option
                      value="5"
                    >
                      Partnership
                    </option>
                    <option
                      value="6"
                    >
                      Solo Prop.
                    </option>
                    <option
                      value="7"
                    >
                      Other
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
              <div
                class=" lg form-group"
              >
                <label
                  class="form-label"
                >
                  Taxed as
                   
                </label>
                <div
                  class="form-control form-button-group "
                >
                  <div
                    class="btn-group"
                    name="taxedAs"
                    role="group"
                  >
                    <button
                      class="btn btn-primary"
                      data-attr="1"
                      type="button"
                    >
                      Corp
                    </button>
                    <button
                      class="btn btn-primary"
                      data-attr="2"
                      type="button"
                    >
                      S-Corp
                    </button>
                    <button
                      class="btn btn-primary"
                      data-attr="3"
                      type="button"
                    >
                      Partnership or Solo Prop
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="d-flex month-day-form-control"
              >
                <div
                  class=" sm form-group"
                >
                  <label
                    class="form-label"
                  >
                    Fiscal year end
                     
                  </label>
                  <button
                    class="form-control dropSide  dropdown"
                    style="position: relative; display: flex; align-items: center;"
                    type="button"
                  >
                    <select
                      style="visibility: hidden;"
                    >
                      <option
                        value=""
                      >
                        ------select-----
                      </option>
                      <option
                        value="1"
                      >
                        Jan
                      </option>
                      <option
                        value="2"
                      >
                        Feb
                      </option>
                      <option
                        value="3"
                      >
                        Mar
                      </option>
                      <option
                        value="4"
                      >
                        Apr
                      </option>
                      <option
                        value="5"
                      >
                        May
                      </option>
                      <option
                        value="6"
                      >
                        Jun
                      </option>
                      <option
                        value="7"
                      >
                        Jul
                      </option>
                      <option
                        value="8"
                      >
                        Aug
                      </option>
                      <option
                        value="9"
                      >
                        Sep
                      </option>
                      <option
                        value="10"
                      >
                        Oct
                      </option>
                      <option
                        value="11"
                      >
                        Nov
                      </option>
                      <option
                        value="12"
                      >
                        Dec
                      </option>
                    </select>
                    <div
                      class="dropSide-custom-select"
                    >
                      Month
                    </div>
                    <span
                      class="dropSide-custom-select-arrow"
                      style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                    >
                      <span
                        style="transform: rotate(90deg);"
                      >
                        &gt;
                      </span>
                    </span>
                  </button>
                </div>
                   
                <div
                  class=" xs form-group"
                >
                  <label
                    class="form-label"
                  >
                     
                     
                  </label>
                  <button
                    class="form-control dropSide  dropdown"
                    style="position: relative; display: flex; align-items: center;"
                    type="button"
                  >
                    <select
                      style="visibility: hidden;"
                    >
                      <option
                        value=""
                      >
                        ------select-----
                      </option>
                    </select>
                    <div
                      class="dropSide-custom-select"
                    >
                      Date
                    </div>
                    <span
                      class="dropSide-custom-select-arrow"
                      style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                    >
                      <span
                        style="transform: rotate(90deg);"
                      >
                        &gt;
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class=" sm form-group"
              >
                <label
                  class="form-label"
                >
                  State of incorporation
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
              <div
                class=" sm form-group"
              >
                <label
                  class="form-label"
                >
                  Company start date
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
              <div
                class=" xs form-group"
              >
                <label
                  class="form-label"
                >
                  Tax EIN
                   
                </label>
                <div
                  class="d-flex"
                >
                  <input
                    autocomplete="off"
                    class="form-control"
                    name="taxEIN"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`IncorporationDetailsContainer to match snapshot active 1`] = `
<body>
  <div>
    <form
      class="h-100"
    >
      <div
        class="d-flex flex-column manage-company h-100"
      >
        <div
          class="d-flex layout-header align-items-center"
        >
          <div>
            <nav
              aria-label="breadcrumb"
            >
              <ol
                class="breadcrumb"
              >
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="#"
                    role="button"
                  >
                    <a
                      href="/home"
                    >
                      Home
                    </a>
                  </a>
                </li>
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="#"
                    role="button"
                  >
                    <a
                      href="/companys"
                    >
                      Manage Company
                    </a>
                  </a>
                </li>
              </ol>
            </nav>
            <h5 />
          </div>
          <div
            class="d-flex align-items-center justify-content-center tab-wrapper"
          />
          <div
            class="ml-auto"
          >
            <div>
              <a
                href="/companys"
              >
                <button
                  class="btn btn-secondary"
                  flow="add,save"
                  link="/companys"
                  type="button"
                >
                  Cancel
                </button>
              </a>
                 
              <button
                class="btn btn-primary"
                flow="save,add"
                type="submit"
              >
                Save
              </button>
                 
            </div>
          </div>
          <div
            class="error-banner d-flex align-items-center "
          >
            <div>
              <div
                class="error-heading"
              >
                OOPS!
              </div>
              <div
                class="error-reason"
              >
                Something went wrong! please try again.
              </div>
            </div>
            <div
              class="ml-auto"
            >
              <button
                class="btn btn-link"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-times fa-w-10 "
                  color="#212529"
                  data-icon="times"
                  data-prefix="fal"
                  focusable="false"
                  role="img"
                  style="font-size: 1.5rem;"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="layout-content h-100 overflow-auto"
        >
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Address 1
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  name="address1"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Address 2
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  name="address2"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Country
                   
                </label>
                <button
                  class="form-control dropSide disabled dropdown"
                  disabled=""
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                    <option
                      value="USA"
                    >
                      USA
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    USA
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    disabled=""
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
              <div
                class=" sm form-group"
              >
                <label
                  class="form-label"
                >
                  State
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  City
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  name="city"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=" xs form-group"
              >
                <label
                  class="form-label"
                >
                  Zip Code
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  name="postalCode"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Phone number
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  name="phoneNumber"
                  type="phone"
                  value=""
                />
              </div>
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  E Mail
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  name="email"
                  type="email"
                  value=""
                />
              </div>
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Company Website
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  name="website"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="line-separator"
          />
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Business type
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                    <option
                      value="1"
                    >
                      LLC
                    </option>
                    <option
                      value="2"
                    >
                      PLC
                    </option>
                    <option
                      value="3"
                    >
                      C-Corp
                    </option>
                    <option
                      value="4"
                    >
                      S-Corp
                    </option>
                    <option
                      value="5"
                    >
                      Partnership
                    </option>
                    <option
                      value="6"
                    >
                      Solo Prop.
                    </option>
                    <option
                      value="7"
                    >
                      Other
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
              <div
                class=" lg form-group"
              >
                <label
                  class="form-label"
                >
                  Taxed as
                   
                </label>
                <div
                  class="form-control form-button-group "
                >
                  <div
                    class="btn-group"
                    name="taxedAs"
                    role="group"
                  >
                    <button
                      class="btn btn-primary"
                      data-attr="1"
                      type="button"
                    >
                      Corp
                    </button>
                    <button
                      class="btn btn-primary"
                      data-attr="2"
                      type="button"
                    >
                      S-Corp
                    </button>
                    <button
                      class="btn btn-primary"
                      data-attr="3"
                      type="button"
                    >
                      Partnership or Solo Prop
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="d-flex month-day-form-control"
              >
                <div
                  class=" sm form-group"
                >
                  <label
                    class="form-label"
                  >
                    Fiscal year end
                     
                  </label>
                  <button
                    class="form-control dropSide  dropdown"
                    style="position: relative; display: flex; align-items: center;"
                    type="button"
                  >
                    <select
                      style="visibility: hidden;"
                    >
                      <option
                        value=""
                      >
                        ------select-----
                      </option>
                      <option
                        value="1"
                      >
                        Jan
                      </option>
                      <option
                        value="2"
                      >
                        Feb
                      </option>
                      <option
                        value="3"
                      >
                        Mar
                      </option>
                      <option
                        value="4"
                      >
                        Apr
                      </option>
                      <option
                        value="5"
                      >
                        May
                      </option>
                      <option
                        value="6"
                      >
                        Jun
                      </option>
                      <option
                        value="7"
                      >
                        Jul
                      </option>
                      <option
                        value="8"
                      >
                        Aug
                      </option>
                      <option
                        value="9"
                      >
                        Sep
                      </option>
                      <option
                        value="10"
                      >
                        Oct
                      </option>
                      <option
                        value="11"
                      >
                        Nov
                      </option>
                      <option
                        value="12"
                      >
                        Dec
                      </option>
                    </select>
                    <div
                      class="dropSide-custom-select"
                    >
                      Month
                    </div>
                    <span
                      class="dropSide-custom-select-arrow"
                      style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                    >
                      <span
                        style="transform: rotate(90deg);"
                      >
                        &gt;
                      </span>
                    </span>
                  </button>
                </div>
                   
                <div
                  class=" xs form-group"
                >
                  <label
                    class="form-label"
                  >
                     
                     
                  </label>
                  <button
                    class="form-control dropSide  dropdown"
                    style="position: relative; display: flex; align-items: center;"
                    type="button"
                  >
                    <select
                      style="visibility: hidden;"
                    >
                      <option
                        value=""
                      >
                        ------select-----
                      </option>
                    </select>
                    <div
                      class="dropSide-custom-select"
                    >
                      Date
                    </div>
                    <span
                      class="dropSide-custom-select-arrow"
                      style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                    >
                      <span
                        style="transform: rotate(90deg);"
                      >
                        &gt;
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class=" sm form-group"
              >
                <label
                  class="form-label"
                >
                  State of incorporation
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
              <div
                class=" sm form-group"
              >
                <label
                  class="form-label"
                >
                  Company start date
                   
                </label>
                <button
                  class="form-control dropSide  dropdown"
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
              <div
                class=" xs form-group"
              >
                <label
                  class="form-label"
                >
                  Tax EIN
                   
                </label>
                <div
                  class="d-flex"
                >
                  <input
                    autocomplete="off"
                    class="form-control"
                    name="taxEIN"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`IncorporationDetailsContainer to match snapshot in edit flow 1`] = `
<body>
  <div>
    <form
      class="h-100"
    >
      <div
        class="d-flex flex-column manage-company h-100"
      >
        <div
          class="d-flex layout-header align-items-center"
        >
          <div>
            <nav
              aria-label="breadcrumb"
            >
              <ol
                class="breadcrumb"
              >
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="#"
                    role="button"
                  >
                    <a
                      href="/home"
                    >
                      Home
                    </a>
                  </a>
                </li>
                <li
                  class="breadcrumb-item"
                >
                  <a
                    href="#"
                    role="button"
                  >
                    <a
                      href="/companys"
                    >
                      Manage Company
                    </a>
                  </a>
                </li>
              </ol>
            </nav>
            <h5 />
          </div>
          <div
            class="d-flex align-items-center justify-content-center tab-wrapper"
          />
          <div
            class="ml-auto"
          >
            <div>
              <a
                href="/companys"
              >
                <button
                  class="inner-layout-actions btn btn-link"
                  flow="edit"
                  link="/companys"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-times fa-w-10 "
                    color="#212529"
                    data-icon="times"
                    data-prefix="fal"
                    focusable="false"
                    role="img"
                    style="font-size: 1.5rem;"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </a>
                 
              <button
                class="inner-layout-actions btn btn-link"
                flow="edit"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-pencil-alt fa-w-16 "
                  color="#212529"
                  data-icon="pencil-alt"
                  data-prefix="fal"
                  focusable="false"
                  role="img"
                  style="font-size: 1.5rem;"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M493.255 56.236l-37.49-37.49c-24.993-24.993-65.515-24.994-90.51 0L12.838 371.162.151 485.346c-1.698 15.286 11.22 28.203 26.504 26.504l114.184-12.687 352.417-352.417c24.992-24.994 24.992-65.517-.001-90.51zM164.686 347.313c6.249 6.249 16.379 6.248 22.627 0L368 166.627l30.059 30.059L174 420.745V386h-48v-48H91.255l224.059-224.059L345.373 144 164.686 324.687c-6.249 6.248-6.249 16.378 0 22.626zm-38.539 121.285l-58.995 6.555-30.305-30.305 6.555-58.995L63.255 366H98v48h48v34.745l-19.853 19.853zm344.48-344.48l-49.941 49.941-82.745-82.745 49.941-49.941c12.505-12.505 32.748-12.507 45.255 0l37.49 37.49c12.506 12.506 12.507 32.747 0 45.255z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="error-banner d-flex align-items-center "
          >
            <div>
              <div
                class="error-heading"
              >
                OOPS!
              </div>
              <div
                class="error-reason"
              >
                Something went wrong! please try again.
              </div>
            </div>
            <div
              class="ml-auto"
            >
              <button
                class="btn btn-link"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-times fa-w-10 "
                  color="#212529"
                  data-icon="times"
                  data-prefix="fal"
                  focusable="false"
                  role="img"
                  style="font-size: 1.5rem;"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="layout-content h-100 overflow-auto"
        >
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Address 1
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  disabled=""
                  name="address1"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Address 2
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  disabled=""
                  name="address2"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Country
                   
                </label>
                <button
                  class="form-control dropSide disabled dropdown"
                  disabled=""
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                    <option
                      value="USA"
                    >
                      USA
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    USA
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    disabled=""
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
              <div
                class=" sm form-group"
              >
                <label
                  class="form-label"
                >
                  State
                   
                </label>
                <button
                  class="form-control dropSide disabled dropdown"
                  disabled=""
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    disabled=""
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  City
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  disabled=""
                  name="city"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=" xs form-group"
              >
                <label
                  class="form-label"
                >
                  Zip Code
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  disabled=""
                  name="postalCode"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Phone number
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  disabled=""
                  name="phoneNumber"
                  type="phone"
                  value=""
                />
              </div>
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  E Mail
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  disabled=""
                  name="email"
                  type="email"
                  value=""
                />
              </div>
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Company Website
                   
                </label>
                <input
                  autocomplete="nope"
                  class="form-control"
                  disabled=""
                  name="website"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="line-separator"
          />
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class=" md form-group"
              >
                <label
                  class="form-label"
                >
                  Business type
                   
                </label>
                <button
                  class="form-control dropSide disabled dropdown"
                  disabled=""
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                    <option
                      value="1"
                    >
                      LLC
                    </option>
                    <option
                      value="2"
                    >
                      PLC
                    </option>
                    <option
                      value="3"
                    >
                      C-Corp
                    </option>
                    <option
                      value="4"
                    >
                      S-Corp
                    </option>
                    <option
                      value="5"
                    >
                      Partnership
                    </option>
                    <option
                      value="6"
                    >
                      Solo Prop.
                    </option>
                    <option
                      value="7"
                    >
                      Other
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    disabled=""
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
              <div
                class=" lg form-group"
              >
                <label
                  class="form-label"
                >
                  Taxed as
                   
                </label>
                <div
                  class="form-control form-button-group disabled"
                >
                  <div
                    class="btn-group"
                    name="taxedAs"
                    role="group"
                  >
                    <button
                      class="btn btn-primary"
                      data-attr="1"
                      disabled=""
                      type="button"
                    >
                      Corp
                    </button>
                    <button
                      class="btn btn-primary"
                      data-attr="2"
                      disabled=""
                      type="button"
                    >
                      S-Corp
                    </button>
                    <button
                      class="btn btn-primary"
                      data-attr="3"
                      disabled=""
                      type="button"
                    >
                      Partnership or Solo Prop
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="d-flex month-day-form-control"
              >
                <div
                  class=" sm form-group"
                >
                  <label
                    class="form-label"
                  >
                    Fiscal year end
                     
                  </label>
                  <button
                    class="form-control dropSide disabled dropdown"
                    disabled=""
                    style="position: relative; display: flex; align-items: center;"
                    type="button"
                  >
                    <select
                      style="visibility: hidden;"
                    >
                      <option
                        value=""
                      >
                        ------select-----
                      </option>
                      <option
                        value="1"
                      >
                        Jan
                      </option>
                      <option
                        value="2"
                      >
                        Feb
                      </option>
                      <option
                        value="3"
                      >
                        Mar
                      </option>
                      <option
                        value="4"
                      >
                        Apr
                      </option>
                      <option
                        value="5"
                      >
                        May
                      </option>
                      <option
                        value="6"
                      >
                        Jun
                      </option>
                      <option
                        value="7"
                      >
                        Jul
                      </option>
                      <option
                        value="8"
                      >
                        Aug
                      </option>
                      <option
                        value="9"
                      >
                        Sep
                      </option>
                      <option
                        value="10"
                      >
                        Oct
                      </option>
                      <option
                        value="11"
                      >
                        Nov
                      </option>
                      <option
                        value="12"
                      >
                        Dec
                      </option>
                    </select>
                    <div
                      class="dropSide-custom-select"
                    >
                      Month
                    </div>
                    <span
                      class="dropSide-custom-select-arrow"
                      disabled=""
                      style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                    >
                      <span
                        style="transform: rotate(90deg);"
                      >
                        &gt;
                      </span>
                    </span>
                  </button>
                </div>
                   
                <div
                  class=" xs form-group"
                >
                  <label
                    class="form-label"
                  >
                     
                     
                  </label>
                  <button
                    class="form-control dropSide disabled dropdown"
                    disabled=""
                    style="position: relative; display: flex; align-items: center;"
                    type="button"
                  >
                    <select
                      style="visibility: hidden;"
                    >
                      <option
                        value=""
                      >
                        ------select-----
                      </option>
                    </select>
                    <div
                      class="dropSide-custom-select"
                    >
                      Date
                    </div>
                    <span
                      class="dropSide-custom-select-arrow"
                      disabled=""
                      style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                    >
                      <span
                        style="transform: rotate(90deg);"
                      >
                        &gt;
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class=" sm form-group"
              >
                <label
                  class="form-label"
                >
                  State of incorporation
                   
                </label>
                <button
                  class="form-control dropSide disabled dropdown"
                  disabled=""
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    disabled=""
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
              <div
                class=" sm form-group"
              >
                <label
                  class="form-label"
                >
                  Company start date
                   
                </label>
                <button
                  class="form-control dropSide disabled dropdown"
                  disabled=""
                  style="position: relative; display: flex; align-items: center;"
                  type="button"
                >
                  <select
                    style="visibility: hidden;"
                  >
                    <option
                      value=""
                    >
                      ------select-----
                    </option>
                  </select>
                  <div
                    class="dropSide-custom-select"
                  >
                    Select
                  </div>
                  <span
                    class="dropSide-custom-select-arrow"
                    disabled=""
                    style="display: flex; position: absolute; right: 0px; padding: 0px; min-width: 32px; font-size: 24px; outline: none; height: 100%;"
                  >
                    <span
                      style="transform: rotate(90deg);"
                    >
                      &gt;
                    </span>
                  </span>
                </button>
              </div>
              <div
                class=" xs form-group"
              >
                <label
                  class="form-label"
                >
                  Tax EIN
                   
                </label>
                <div
                  class="d-flex"
                >
                  <input
                    autocomplete="off"
                    class="form-control"
                    disabled=""
                    name="taxEIN"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;
